# capstone_team3

./: .env.example  .gitignore  README.md
config/: burger_hospital.yaml  rooms.yaml  vaccines.yaml
docs/: ~$톤_난이도별_가이드.docx
maps/: hospital_map.pgm  hospital_map.yaml  hospital_map_checkpoint1.pgm  hospital_map_checkpoint1.yaml
src/nd1_capstone_tb3/: package.xml  setup.cfg  setup.py
src/nd1_capstone_tb3/launch/: autonomous_slam.launch.py  bringup.launch.py  hospital_world.launch.py  manual_slam.launch.py  map_localization.launch.py  spawn_boxes.launch.py
src/nd1_capstone_tb3/models/: box1.sdf  vaccine_a.sdf  vaccine_ab.sdf  vaccine_b.sdf  vaccine_o.sdf
src/nd1_capstone_tb3/nd1_capstone_tb3/: coordinator_fsm.py  node_a_llm.py  node_b_nav.py  node_c_grasp.py
