<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nd1_capstone_tb3</name>
  <version>1.0.0</version>
  <description>ND1 캡스톤 (TurtleBot3 이식) — LLM 명령 해석(Node A) + FSM 조정(Coordinator)</description>
  <maintainer email="instructor@nd1.local">ND1</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>aws_robomaker_hospital_world</exec_depend>
  <exec_depend>turtlebot3_cartographer</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
